--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -211,54 +211,82 @@ E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]=0-0&\text{FB-RCBD}\\
 E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
 \end{cases}$$
 
+$$E[y_{ij}-\bar y_{.j}]=\begin{cases}
+E[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]=0&\text{FB-RCBD}\\
+E[\beta_j]-\frac1a \sum_{j=1}^aE[\beta_j]+E[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]=0&\text{RB-RCBD}
+\end{cases}$$
+
 $$E[\bar y_{i.}-\bar y_{..}]=\begin{cases}\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0-0&\text{FT-CRD}\\
 \frac1n \sum_{j=1}^nE[\tau_{i}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[\tau_{i}]+\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
 \frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{FB-RCBD}\\
 \frac1b \sum_{j=1}^bE[\beta_j]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[\beta_j]+\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
 \end{cases}$$
 
-$$E[\bar y_{.j}-\bar y_{..}]=\begin{cases}\frac1{a}\sum_{j=1}^aE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0&\text{FT-CRD}\\
-\frac1a \sum_{j=1}^aE[\tau_{i}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[\tau_{i}]+\frac1a \sum_{j=1}^aE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
+
+
+$$E[\bar y_{.j}-\bar y_{..}]=\begin{cases}
 \frac1{a}\sum_{j=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{FB-RCBD}\\
 \frac1a \sum_{j=1}^aE[\beta_j]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[\beta_j]+\frac1a \sum_{j=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
 \end{cases}$$
 
 
-$$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=\begin{cases}E[ε_{ij}]-\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]+\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0&\text{FT-CRD}\\
-E[\tau_{i}]-\frac1n \sum_{j=1}^nE[\tau_{i}]-\frac1a \sum_{j=1}^aE[\tau_{i}]+\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[\tau_{i}]+E[ε_{ij}]-\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]+\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
-E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{FB-RCBD}\\
-E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]-\frac1a \sum_{j=1}^aE[\beta_j]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
-\end{cases}$$
+$$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0\quad \text{FB-RCBD}$$
 
  ---
 
 $Var[y_{ij}-\bar y_{i.}]=$
 
-$$Var[ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}]=Var[ε_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[ε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]\quad \text{FT-CRD}$$
+$Var[ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}]=Var[ε_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[ε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]\quad \text{FT-CRD}$
 
 $Var[\tau_{i}-\frac1n \sum_{j=1}^n\tau_{i}+ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}]=Var[\tau_{i}]+\frac1{n^2}\sum_{j=1}^nVar[\tau_{i}]-\frac2nCov[\tau_{i},\sum_{j=1}^n\tau_{i}]+Var[ε_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[ε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]$
+
 $+Cov[\tau_{i},ε_{ij}]-\frac2nCov[\tau_{i},\sum_{j=1}^nε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^n\tau_{i}]+\frac2{n^2}Cov[\sum_{j=1}^n\tau_{i},\sum_{j=1}^nε_{ij}]\quad\text{RT-CRD}$
 
-$$Var[ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}]=Var[ε_{ij}]+\frac1{b^2}\sum_{j=1}^bVar[ε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^bε_{ij}]\quad\text{FB-RCBD}$$
+$Var[ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}]=Var[ε_{ij}]+\frac1{b^2}\sum_{j=1}^bVar[ε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^bε_{ij}]\quad\text{FB-RCBD}$
 
 $Var[\beta_{j}-\frac1b \sum_{j=1}^b\beta_{j}+ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}]=Var[\beta_{j}]+\frac1{b^2}\sum_{j=1}^bVar[\beta_{j}]-\frac2bCov[\beta_{j},\sum_{j=1}^b\beta_{j}]+Var[ε_{ij}]+\frac1{b^2}\sum_{j=1}^bVar[ε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^bε_{ij}]$
+
 $+Cov[\beta_{j},ε_{ij}]-\frac2bCov[\beta_{j},\sum_{j=1}^bε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^b\beta_{j}]+\frac2{b^2}Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]\quad\text{RB-RCBD}$
 
  ---
 
 $Var[\bar y_{i.}-\bar y_{..}]=$
 
-$$Var[\frac1n\sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}]=\frac1nVar[ε_{ij}]+\frac1{a^2n^2}\sum_{i=1}^a\sum_{j=1}^nVar[ε_{ij}]-\frac2{an^2}Cov[\sum_{j=1}^nε_{ij},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]$$
+4
 
+$$Var[\frac1n\sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}]=\frac1nVar[ε_{ij}]+\frac1{a^2n^2}\sum_{i=1}^a\sum_{j=1}^nVar[ε_{ij}]-\frac2{an^2}Cov[\sum_{j=1}^nε_{ij},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]\quad \text{FT-CRD}$$
 
+5
+
+$Var[\frac1n \sum_{j=1}^n\tau_{i}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n\tau_{i}+\frac1n \sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}]=\quad \text{RT-CRD}$
+
+6
+
+$$Var[]=\quad \text{FB-RCBD}$$
+
+ ---
+
+6
+
+$Var[y_{ij}-\bar y_{.j}]=$
+
+$$Var[]=\quad \text{FB-RCBD}$$
+
+ ---
 
 $Var[\bar y_{.j}-\bar y_{..}]=$
 
-$$Var[\frac1a\sum_{j=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=\frac1aVar[ε_{ij}]+\frac1{a^2b^2}\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]-\frac2{ab^2}Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]$$
+6
 
+$$Var[\frac1a\sum_{j=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=\frac1aVar[ε_{ij}]+\frac1{a^2b^2}\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]-\frac2{ab^2}Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]\quad \text{FB-RCBD}$$
 
+7
 
+$$Var[]=\quad \text{RB-RCBD}$$
 
+ ---
+
+6
 
 $Var[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=Var[ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}-\frac1a\sum_{i=1}^a\tau_{i}-\frac1b\sum_{j=1}^b\beta_{j}]\quad\text{FB-RCBD}$
 
