--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -186,27 +186,22 @@ For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$
 |FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-0-\beta_j-\frac{ \sum_{i=1}^aε_{ij}}a$|$=\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a$|
 |FB-RCBD| | | |
 
-|$y_{ij}-\bar y_{.j}$||||
+|$\bar y_{i.}-\bar y_{..}$||||
 | ---                |   ---  |---|---|
-|FT-CRD |$\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n-\frac{\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}{an}$|$=\tau_{i}+\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
-|RT-CRD | |$\tau_{i}-\frac1{a}\sum_{i=1}^a\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
+|FT-CRD |$\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n-\frac{\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}{an}$|$=\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
+|RT-CRD | |$=\tau_{i}-\frac1{a}\sum_{i=1}^a\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
 |FB-RCBD|$\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\tau_{i}+$|$\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}$
 |FB-RCBD| | | |
 
+|$\bar y_{.j}-\bar y_{..}$||||
+| ---                |   ---  |---|---|
+|FB-RCBD|$\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\beta_j+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$
+|FB-RCBD| |$\beta_j-\frac{\sum_{j=1}^b\beta_j}{b}+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$|
 
 
-$$\bar y_{i.}-\bar y_{..}=\begin{cases}\frac1n \sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})=
-\begin{cases}\tau_{i}+\frac1n\sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}&\text{FT-CRD}\\
-\tau_{i}-\frac1{a}\sum_{i=1}^a\tau_{i}+\frac1n \sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}&\text{RT-CRD}\end{cases}\\
-\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}=
-\begin{cases}\tau_{i}+\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
-\tau_{i}+\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}
-\end{cases}$$
-
-
-$$\bar y_{.j}-\bar y_{..}=\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})=
+$$\bar y_{.j}-\bar y_{..}=\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}=
 \begin{cases} &\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
-\frac1a \sum_{i=1}^a\beta_j-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b\beta_j+&\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{RB-RCBD} \end{cases}$$
+\beta_j-\frac{\sum_{j=1}^b\beta_j}{b}+&\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}&\text{RB-RCBD} \end{cases}$$
 
 $$y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}=\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})$$
 $$=ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}-\frac1a\sum_{i=1}^a\tau_{i}-\frac1b\sum_{j=1}^b\beta_{j}\quad\text{FB-RCBD}$$
