--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -178,68 +178,72 @@ For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$
 | ---                |   ---  |---|---|   ---  |
 |FT-CRD |$\mu+\tau_{i}+ε_{ij}-\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n$|$=\mu+\tau_{i}+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^nε_{ij}}n$|$=$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
 |RT-CRD | | | | |
-|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b$|$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-0-\frac{ \sum_{j=1}^bε_{ij}}b$|$=\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
-|FB-RCBD| |$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^b\beta_j}b -\frac{\sum_{j=1}^bε_{ij}}b$|$=\beta_j-\frac1b \sum_{j=1}^b\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
+|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-0-\frac{ \sum_{j=1}^bε_{ij}}b$|$=\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
+|RB-RCBD| |$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^b\beta_j}b -\frac{\sum_{j=1}^bε_{ij}}b$|$=\beta_j-\frac1b \sum_{j=1}^b\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
 
 |$y_{ij}-\bar y_{.j}$||||
 | ---                |   ---  |---|---|
 |FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-0-\beta_j-\frac{ \sum_{i=1}^aε_{ij}}a$|$=\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a$|
-|FB-RCBD| | | |
+|RB-RCBD| | | |
 
 |$\bar y_{i.}-\bar y_{..}$||||
 | ---                |   ---  |---|---|
 |FT-CRD |$\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n-\frac{\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}{an}$|$=\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
 |RT-CRD | |$=\tau_{i}-\frac1{a}\sum_{i=1}^a\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
 |FB-RCBD|$\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\tau_{i}+$|$\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}$
-|FB-RCBD| | | |
+|RB-RCBD| | | |
 
 |$\bar y_{.j}-\bar y_{..}$||||
 | ---                |   ---  |---|---|
 |FB-RCBD|$\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\beta_j+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$
-|FB-RCBD| |$\beta_j-\frac{\sum_{j=1}^b\beta_j}{b}+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$|
+|RB-RCBD| |$=\beta_j-\frac{\sum_{j=1}^b\beta_j}{b}+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$|
 
-
-$$\bar y_{.j}-\bar y_{..}=\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}=
-\begin{cases} &\frac1a\sum_{i=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}&\text{FB-RCBD}\\
-\beta_j-\frac{\sum_{j=1}^b\beta_j}{b}+&\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}&\text{RB-RCBD} \end{cases}$$
-
-$$y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}=\mu+\tau_{i}+\beta_j+ε_{ij}-\frac1a \sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})-\frac1b \sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})$$
-$$=ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}-\frac1a\sum_{i=1}^a\tau_{i}-\frac1b\sum_{j=1}^b\beta_{j}\quad\text{FB-RCBD}$$
+|$y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}$||||
+| ---   |   ---  |---|---|
+|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac {\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b+\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{j=1}^bε_{ij}}b+\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$
 
  ---
 
 For $ε_{ij}\sim iid\ N(0,σ^2)$, $E[ε_{ij}]=0$
 
-$$E[y_{ij}-\bar y_{i.}]=\begin{cases}E[ε_{ij}]-\frac1{n}\sum_{j=1}^nE[ε_{ij}]=0-0&\text{FT-CRD}\\
-E[\tau_{i}]-\frac1n \sum_{j=1}^nE[\tau_{i}]+E[ε_{ij}]-\frac1n \sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
-E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]=0-0&\text{FB-RCBD}\\
-E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
+$$E[y_{ij}-\bar y_{i.}]=\begin{cases}E[ε_{ij}]-\frac1{n}\sum_{j=1}^nE[ε_{ij}]=0&\text{FT-CRD}\\
+E[ε_{ij}]-\frac1n \sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
+E[\beta_j]+E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{FB-RCBD}\\
+E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{RB-RCBD}
 \end{cases}$$
 
 $$E[y_{ij}-\bar y_{.j}]=\begin{cases}
-E[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]=0&\text{FB-RCBD}\\
-E[\beta_j]-\frac1a \sum_{j=1}^aE[\beta_j]+E[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]=0&\text{RB-RCBD}
+E[\tau_{i}]+E[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
+E[\tau_{i}]+E[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
 \end{cases}$$
 
-$$E[\bar y_{i.}-\bar y_{..}]=\begin{cases}\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0-0&\text{FT-CRD}\\
-\frac1n \sum_{j=1}^nE[\tau_{i}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[\tau_{i}]+\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
-\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{FB-RCBD}\\
-\frac1b \sum_{j=1}^bE[\beta_j]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[\beta_j]+\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
+$$E[\bar y_{i.}-\bar y_{..}]=\begin{cases}E[\tau_{i}]+\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=\tau_{i}&\text{FT-CRD}\\
+E[\tau_{i}]-\frac1{a}\sum_{i=1}^aE[\tau_{i}]+\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=\tau_{i}&\text{RT-CRD}\\
+E[\tau_{i}]+\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
+E[\tau_{i}]+\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
 \end{cases}$$
 
 
 
 $$E[\bar y_{.j}-\bar y_{..}]=\begin{cases}
-\frac1{a}\sum_{j=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{FB-RCBD}\\
-\frac1a \sum_{j=1}^aE[\beta_j]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[\beta_j]+\frac1a \sum_{j=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
+E[\beta_j]+\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{FB-RCBD}\\
+E[\beta_j]-\frac1{a}\sum_{i=1}^aE[\beta_j]+\frac1a \sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{RB-RCBD}
 \end{cases}$$
 
 
-$$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0\quad \text{FB-RCBD}$$
+$$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=E[ε_{ij}]-\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0\quad \text{FB-RCBD}$$
 
  ---
 
 $Var[y_{ij}-\bar y_{i.}]=$
+
+|$Var[y_{ij}-\bar y_{i.}]$||||
+| ---   |   ---  |---|---|
+|FT-CRD |$Var[ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]$|$Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$|$\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\sigma^2$
+|RT-CRD | | | |
+|FB-RCBD|$Var[\beta_{j}+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]$|$Var[\beta_{j}]+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$|
+|RB-RCBD|$Var[\beta_{j}-\frac{\sum_{j=1}^b\beta_{j}}b+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]$|$Var[\beta_{j}]+\frac{\sum_{j=1}^bVar[\beta_{j}]}{b^2}+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},\sum_{j=1}^b\beta_{j}]}b+\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[\sum_{j=1}^b\beta_{j},ε_{ij}]}b+\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]}{b^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$|
+
 
 $Var[ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}]=Var[ε_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[ε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]\quad \text{FT-CRD}$
 
